--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <frameset rows="10%,80%,10%">
         <frame name="top" src="calculator_title.html"/>
-        <frame name="main" src="calculator.html" width="150px"/>
+        <frame name="main" src="calculator.html" min-width="650px"/>
         <frame name="bottom" src="calculator_copyright.html"/>
     </frameset>
 </html>
