--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    </head>
     <frameset rows="10%,80%,10%">
         <frame name="top" src="calculator_title.html"/>
         <frame name="main" src="calculator.html" min-width="650px"/>
