--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <frameset rows="15%,75%,15%">
         <frame name="top" src="calculator_title.html"/>
-        <frame name="main" src="calculator.html"/>
+        <frame name="main" src="calculator.html" float:"left"/>
         <frame name="bottom" src="calculator_copyright.html"/>
     </frameset>
 </html>
